# weather-report.com

./: README.md
backend/: app.py  pyproject.toml  requirements.txt  run.py  weather_classes.py  weather_report.py
backend/wttr/: pill.py  text.py
backend/wttr/icons/256/: renamer.py  resizer.py
backend/wttr/icons/SVG/: svg_converter.py
frontend/: package-lock.json  package.json
frontend/public/: global.css  index.html  style.css
frontend/sass/: _Button.scss  _Dropdown.scss  _FONTS.scss  _SearchBar.scss  _ThemeToggle.scss  style.scss
frontend/src/: App.svelte  location.js
frontend/src/components/: Dropdown.svelte  SearchBar.svelte  ThemeToggle.svelte
