[project]
name = "weather-report"
version = "1.1.0"
description = "A Cute weather app :)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "annotated-types==0.7.0",
    "blinker==1.9.0",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "flask==3.1.2",
    "idna==3.11",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "numpy==2.2.6",
    "pillow==12.0.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "python-dotenv==1.2.1",
    "requests==2.32.5",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.5.0",
    "werkzeug==3.1.4",
]
